# browser-use-compaction-co

./: .env.example  .gitignore  AGENTS.md  README.md  eval_report.json  pyproject.toml
backend/browserdelta/: __init__.py  cli.py  config.py  main.py  observability.py  schemas.py  sdk.py  storage.py
demo_pages/: local_checkout.html  search_filter.html  visual_canvas_chart.html  visual_progress_toast.html  visual_swatch_picker.html
docs/: architecture.md  arize-evaluator-setup.md  browsergym-live-suite.example.json  browsergym-miniwob-smoke.example.json  external-evals.md  schemas.md  team-todos.md
integrations/arize/: action_preservation_task_evaluators.json  action_preservation_template.txt  action_preservation_template_task_evaluators.json  action_preservation_variables.json  browserdelta_action_preservation_evaluator.py
reports/demo/: browserdelta-devpost.md
scripts/: build_failure_suite.py  compact_run.py  eval_ab.py  eval_external_suite.py  eval_run.py  eval_suite.py  import_miniwob_demos.py  record_browsergym.py  record_demo.py  record_task.py  run_api.py  run_browsergym_live.py  summarize_live_reports.py  summarize_miniwob_5seed.py
tasks/: docs_search.json  herokuapp_add_remove.json  herokuapp_checkboxes.json  herokuapp_login.json  local_checkout.json  saucedemo_checkout.json  search_filter.json  shopping.json  todomvc.json  visual_canvas_chart.json  visual_progress_toast.json  visual_swatch_picker.json
tests/: test_api_runs.py  test_benchmark_search_filter.py  test_build_failure_suite.py  test_cli.py  test_codec.py  test_compact_run_cli.py  test_eval_ab.py  test_eval_runner.py  test_eval_suite.py  test_example_fixture.py  test_external_browsergym.py  test_image_diff.py  test_llm_agent.py  test_metrics.py  test_miniwob_demo_importer.py  test_record_demo_e2e.py  test_router.py  test_run_contract.py  test_search_filter_task.py  test_structural_diff.py  test_summarize_live_reports.py  test_visual_benchmark_tasks.py
video/: README.md  package-lock.json  package.json
video/src/: Root.tsx  (+2 more)
viewer/: index.html  package-lock.json  package.json  vite.config.ts
(+41 files in other folders)
