[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browserdelta"
version = "0.1.0"
description = "Semantic browser-state compaction for Browserbase agents"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "browserbase>=1.4.0",
  "playwright>=1.48.0",
  "pillow>=10.4.0",
  "numpy>=1.26.0",
  "opencv-python>=4.10.0.84",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]
observability = [
  "arize-otel>=0.13.0",
  "openinference-instrumentation>=0.1.53",
  "opentelemetry-api>=1.42.0",
  "opentelemetry-sdk>=1.42.0",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
